remove duplicates in search queue

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 aiohttp = {extras = ["speedups"], version = "^3.8.5"}
+ordered-set = "^4.1.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.7.0"
